--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>myMavenProject</name>
+  <name>AutoReign</name>
   <url>http://maven.apache.org</url>
   
   <properties>
@@ -55,7 +55,7 @@
 				<configuration>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
-						<suiteXmlFile>XMLFiles/${xmlFiles}</suiteXmlFile>
+						<suiteXmlFile>XMLFiles/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					
 				</configuration>
